fix images not rendering offscreen

--- a/css/index.css
+++ b/css/index.css
@@ -309,3 +309,7 @@ progress {
 .lb-nav-list::before{
     content:"|"
 }
+
+.disable{
+    pointer-events: none;
+}
