--- a/css/mobile.css
+++ b/css/mobile.css
@@ -153,3 +153,7 @@ body{
 .scroll-container{
     backface-visibility: hidden;
 }
+
+.lb-photo-album{
+    transform: translateZ(0);
+}
